syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.admin";
option java_outer_classname = "AdminProto";

service SaveUser {
  rpc SaveUser (SaveUserInfoRequest) returns (SaveUserInfoResponse) {
  }
}

message SaveUserInfoRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SaveUserInfoResponse {
  string result = 1;
  string message = 2;
}